--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -34,3 +34,32 @@ body {
   border-bottom: 1px solid #dcdcdc;
   padding: 0.8em 0;
 }
+.search-body {
+  width: 50%;
+  padding-left: 3em;
+}
+.search-body a {
+  color: #ddd;
+  text-decoration: none;
+}
+.search-body a:hover {
+  color: #eff;
+  font-weight: bold;
+}
+.search-body h2 {
+  color: #f36;
+  margin-bottom: 2em 0;
+  text-shadow: 0 0 3px red, 0 0 8px red;
+}
+.search-body .content {
+  border-bottom: 1px solid #fbf;
+  padding: 1.4em 0 0.8em 0;
+}
+.search-body .content .padding-bottom {
+  margin: 0;
+}
+.search-body .content .name {
+  color: #ddd;
+  font-size: 120%;
+  text-shadow: 0 0 1px #ddd, 0 0 2px #ddd;
+}
