--- a/public/css/userpage.css
+++ b/public/css/userpage.css
@@ -15,7 +15,7 @@ body {
   text-shadow: 0 0 3px red, 0 0 8px red;
 }
 .pasts {
-  width: 80%;
+  width: 75%;
 }
 .pasts h2 {
   color: #f36;
@@ -25,6 +25,7 @@ body {
 .past-comment {
   border-bottom: 1px solid white;
   padding: 30px 10px;
+  margin-right: 2em;
 }
 .past-name {
   font-weight: bold;
@@ -64,12 +65,23 @@ body {
   border-bottom: 1px solid white;
   padding: 30px 0;
 }
-.my-details {
-  width: 20%;
+.my-detail {
+  width: 25%;
   box-sizing: border-box;
-  border: 1px solid black;
+  border-left: double 5px #bff;
   padding-top: 10px;
   padding-right: 5px;
+  padding-left: 1em;
+}
+.my-detail .basic-profile img {
+  border-radius: 50%;
+}
+.my-detail .my-rank {
+  margin-top: 1.5em;
+}
+.my-detail .my-rank h3 {
+  color: #c6f;
+  text-shadow: 0 0 3px #c0c, 0 0 8px #c0c;
 }
 .footer {
   padding: 10px 5px;
@@ -77,6 +89,10 @@ body {
 .footer a {
   color: #eee;
   text-decoration: none;
+}
+.footer a:hover {
+  color: #eff;
+  font-weight: bold;
 }
 .user-detail {
   padding: 0 1em;
@@ -86,9 +102,14 @@ body {
   margin: 0.5em 0;
   text-shadow: 0 0 3px red, 0 0 8px red;
 }
-.user-detail.follow-vue {
+.user-detail h3 {
+  margin: 0.5em 0;
+  color: #c6f;
+  text-shadow: 0 0 3px #c0c, 0 0 8px #c0c;
+}
+.user-detail .follow-vue {
   padding-left: 5em;
 }
-.user-detail.footer {
+.user-detail .footer {
   padding-left: 0;
 }
