--- a/public/scss/detail.scss
+++ b/public/scss/detail.scss
@@ -7,6 +7,7 @@ body{
     font-family: 'Noto Serif JP', sans-serif;
 }
 
+//followrランキング
 .follower-body{
     margin:auto;
     padding:2em;
@@ -36,4 +37,35 @@ body{
     width:50%;
     border-bottom: 1px solid #DCDCDC;
     padding: 0.8em 0;
+}
+
+//検索結果画面
+.search-body{
+    width: 50%;
+    padding-left: 3em;
+    a{
+        color: #DDDDDD;
+        text-decoration: none;
+        &:hover {
+            color: #EEFFFF;
+            font-weight: bold;
+        }
+    }
+    h2{
+        color: #FF3366;
+        margin-bottom: 2em 0;
+        text-shadow: 0 0 3px red,0 0 8px red;
+    }
+    .content{
+        border-bottom:1px solid #FFBBFF	;
+        padding:1.4em 0 0.8em 0;
+        .padding-bottom{
+            margin:0;
+        }
+        .name{
+            color:#DDDDDD;
+            font-size:120%;
+            text-shadow: 0 0 1px #DDDDDD,0 0 2px #DDDDDD;
+        }
+    }
 }
