--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -28,15 +28,35 @@ body {
   background: repeating-linear-gradient(0deg, #c62828 0.1em, #ef5350 0.2em, #ffebee 0.3em, #ef5350 0.4em, #c62828 0.5em);
   -webkit-background-clip: text;
 }
+.follower-body a {
+  font-size: 25px;
+}
+.follower-body p {
+  font-size: 25px;
+}
 .ranks {
   margin: 0.5em auto;
   width: 50%;
   border-bottom: 1px solid #dcdcdc;
   padding: 0.8em 0;
 }
+@media screen and (max-width: 620px) {
+  .follower-body {
+    width: 100%;
+  }
+  .follower-body h2 {
+    font-size: 200%;
+  }
+  .follower-body a {
+    font-size: 20px;
+  }
+  .follower-body p {
+    font-size: 20px;
+  }
+}
 .search-body {
-  width: 50%;
-  padding-left: 3em;
+  padding-left: 1.5em;
+  display: flex;
 }
 .search-body a {
   color: #ddd;
@@ -51,15 +71,71 @@ body {
   margin-bottom: 2em 0;
   text-shadow: 0 0 3px red, 0 0 8px red;
 }
-.search-body .content {
+.search-body .results {
+  width: 70%;
+  margin-right: 1em;
+}
+.search-body .results .content {
   border-bottom: 1px solid #fbf;
   padding: 1.4em 0 0.8em 0;
 }
-.search-body .content .padding-bottom {
+.search-body .results .content .padding-bottom {
   margin: 0;
 }
-.search-body .content .name {
+.search-body .results .content .name {
   color: #ddd;
   font-size: 120%;
   text-shadow: 0 0 1px #ddd, 0 0 2px #ddd;
+}
+.search-body .steam-news {
+  border-left: 1px solid #ddd;
+  width: 35%;
+  padding: 0 1em;
+}
+.search-body .steam-news .news a {
+  color: #ddd;
+  text-decoration: none;
+}
+.search-body .steam-news .news a:hover {
+  color: #eff;
+  font-weight: bold;
+}
+.search-body .steam-news .game-title {
+  color: #c6f;
+  text-shadow: 0 0 3px #c0c, 0 0 8px #c0c;
+}
+.search-body .steam-news h3 {
+  margin-bottom: 0.5em;
+  color: #0ff;
+  text-shadow: 0 0 3px #00f, 0 0 8px #00f;
+}
+.footer {
+  padding: 10px 5px;
+}
+.footer a {
+  color: #eee;
+  text-decoration: none;
+}
+.footer a:hover {
+  color: #eff;
+  font-weight: bold;
+}
+@media screen and (max-width: 800px) {
+  .search-body {
+    display: block;
+    padding: 0 0.5em;
+  }
+  .search-body h2 {
+    font-size: 150%;
+  }
+  .search-body .results {
+    width: 100%;
+  }
+  .search-body .steam-news {
+    width: 100%;
+    border: none;
+  }
+  .search-body .steam-news h3 {
+    font-size: 150%;
+  }
 }
