--- a/public/css/userpage.css
+++ b/public/css/userpage.css
@@ -15,7 +15,7 @@ body {
   text-shadow: 0 0 3px red, 0 0 8px red;
 }
 .pasts {
-  width: 75%;
+  width: 70%;
 }
 .pasts h2 {
   color: #f36;
@@ -66,9 +66,9 @@ body {
   padding: 30px 0;
 }
 .my-detail {
-  width: 25%;
+  width: 30%;
   box-sizing: border-box;
-  border-left: double 5px #bff;
+  border-right: double 5px #bff;
   padding-top: 10px;
   padding-right: 5px;
   padding-left: 1em;
@@ -94,6 +94,40 @@ body {
   color: #eff;
   font-weight: bold;
 }
+@media screen and (max-width: 900px) {
+  .userpage-body {
+    display: block;
+    padding: 0;
+  }
+  .userpage-body h3 {
+    font-size: 200%;
+  }
+  .userpage-body .pasts {
+    width: 100%;
+  }
+  .userpage-body .my-detail {
+    width: 100%;
+    border-right: none;
+    border-bottom: double 5px #bff;
+    display: flex;
+    margin-bottom: 2em;
+    padding: 1em;
+  }
+  .userpage-body .my-detail .my-rank {
+    margin: 0 1em;
+  }
+  .userpage-body .my-detail .basic-profile img {
+    margin: 0.5em;
+    width: 100px;
+    height: 100px;
+  }
+  .userpage-body .my-detail .user-name {
+    margin: 0 0.5em;
+  }
+  .userpage-body .pasts {
+    padding: 0 1em;
+  }
+}
 .content {
   display: flex;
 }
@@ -102,9 +136,13 @@ body {
   padding: 0 1em;
   display: flex;
 }
+.content .user-detail img {
+  border-radius: 50%;
+  margin: 0.5em 0;
+}
 .content .user-detail h2 {
   color: #f36;
-  margin: 0.5em 0;
+  margin: 0.5em;
   text-shadow: 0 0 3px red, 0 0 8px red;
 }
 .content .user-detail h3 {
@@ -116,7 +154,15 @@ body {
   padding-left: 0;
 }
 .content .user-detail .detail-left {
-  width: 50%;
+  width: 30%;
+  margin-right: 2em;
+  border-right: 1px solid #ddd;
+}
+.content .user-detail .detail-left .user {
+  text-align: center;
+}
+.content .user-detail .detail-left .posts {
+  margin: 0 auto;
 }
 .content .user-detail .detail-right {
   width: 50%;
@@ -124,7 +170,7 @@ body {
 .content .steam-news {
   border-left: 1px solid #ddd;
   width: 35%;
-  padding: 1em;
+  padding: 0 1em;
 }
 .content .steam-news .news a {
   color: #ddd;
@@ -134,8 +180,84 @@ body {
   color: #eff;
   font-weight: bold;
 }
+.content .steam-news .game-title {
+  color: #c6f;
+  text-shadow: 0 0 3px #c0c, 0 0 8px #c0c;
+}
 .content .steam-news h3 {
   margin: 0.5em 0;
   color: #0ff;
   text-shadow: 0 0 3px #00f, 0 0 8px #00f;
+}
+.footer-none {
+  display: none;
+}
+@media screen and (max-width: 900px) {
+  .content {
+    display: block;
+  }
+  .content .user-detail {
+    display: block;
+    width: 100%;
+  }
+  .content .user-detail .detail-left {
+    display: flex;
+    width: 100%;
+    border-right: none;
+    border-bottom: double 5px #bff;
+  }
+  .content .user-detail .detail-left .user {
+    width: 30%;
+  }
+  .content .user-detail .detail-left .footer {
+    display: none;
+  }
+  .content .user-detail .detail-left .follow-modeule {
+    margin: 0.5em;
+  }
+  .content .user-detail .detail-right {
+    width: 100%;
+    border-bottom: double 5px #bff;
+  }
+  .content .steam-news {
+    width: 100%;
+  }
+  .content .footer-none {
+    display: block;
+    padding: 10px 5px;
+  }
+  .content .footer-none a {
+    color: #eee;
+    text-decoration: none;
+  }
+  .content .footer-none a:hover {
+    color: #eff;
+    font-weight: bold;
+  }
+}
+@media screen and (max-width: 500px) {
+  .content .user-detail img {
+    width: 100px;
+    height: 100px;
+  }
+  .content .user-detail .detail-left {
+    display: block;
+  }
+  .content .user-detail .detail-left .user {
+    text-align: center;
+    width: 100%;
+  }
+  .content .user-detail .detail-left .posts {
+    text-align: center;
+  }
+  .content .user-detail .detail-left .posts .center p {
+    display: inline-block;
+    text-align: left;
+  }
+  .content .user-detail .detail-right h3 {
+    text-align: center;
+  }
+  .content .steam-news h3 {
+    text-align: center;
+  }
 }
