--- a/public/scss/detail.scss
+++ b/public/scss/detail.scss
@@ -30,6 +30,12 @@ body{
     	background: repeating-linear-gradient(0deg, #C62828 0.1em, #EF5350 0.2em, #FFEBEE 0.3em, #EF5350 0.4em, #C62828 0.5em); 
     	-webkit-background-clip: text;
     }
+    a{
+        font-size:25px;
+    }
+    p{
+        font-size:25px;
+    }
 }
 
 .ranks{
@@ -39,10 +45,26 @@ body{
     padding: 0.8em 0;
 }
 
+@media screen and (max-width: 620px){
+    .follower-body{
+        width:100%;
+        h2{
+            font-size:200%;
+        }
+        a{
+            font-size:20px;
+        }
+        p{
+            font-size:20px;
+        }
+    
+    }
+}
+
 //検索結果画面
 .search-body{
-    width: 50%;
-    padding-left: 3em;
+    padding-left: 1.5em;
+    display:flex;
     a{
         color: #DDDDDD;
         text-decoration: none;
@@ -56,16 +78,76 @@ body{
         margin-bottom: 2em 0;
         text-shadow: 0 0 3px red,0 0 8px red;
     }
-    .content{
-        border-bottom:1px solid #FFBBFF	;
-        padding:1.4em 0 0.8em 0;
-        .padding-bottom{
-            margin:0;
+    .results{
+        width:70%;
+        margin-right:1em;
+        .content{
+            border-bottom:1px solid #FFBBFF	;
+            padding:1.4em 0 0.8em 0;
+            .padding-bottom{
+                margin:0;
+            }
+            .name{
+                color:#DDDDDD;
+                font-size:120%;
+                text-shadow: 0 0 1px #DDDDDD,0 0 2px #DDDDDD;
+            }
         }
-        .name{
-            color:#DDDDDD;
-            font-size:120%;
-            text-shadow: 0 0 1px #DDDDDD,0 0 2px #DDDDDD;
+    }
+    .steam-news{
+        border-left:1px solid #DDDDDD;
+        width:35%;
+        padding:0 1em;
+        .news{
+            a{
+                color:  #DDDDDD;
+                text-decoration: none;
+                &:hover {
+                    color: #EEFFFF;
+                    font-weight: bold;
+                }
+            }
+        }
+        .game-title{
+            color: #CC66FF;
+            text-shadow: 0 0 3px #CC00CC,0 0 8px #CC00CC;
+        }
+        h3{
+            margin-bottom: 0.5em;
+            color: #00FFFF;
+            text-shadow: 0 0 3px #0000FF,0 0 8px #0000FF;
+        }
+    }
+}
+.footer{
+    padding:10px 5px;
+    a{
+        color:	#EEEEEE;
+        text-decoration: none;
+         &:hover{
+            color: #EEFFFF;
+            font-weight: bold;
+        }
+    }
+}
+
+
+@media screen and (max-width: 800px){
+    .search-body{
+        display:block;
+        padding:0 0.5em;
+        h2{
+            font-size:150%;
+        }
+        .results{
+            width:100%;
+        }
+        .steam-news{
+            width:100%;
+            border:none;
+            h3{
+                font-size:150%;
+            }
         }
     }
 }
