--- a/public/scss/edit.scss
+++ b/public/scss/edit.scss
@@ -39,3 +39,15 @@ body{
     }
 }
 
+@media screen and (max-width: 520px){
+    .edit-body{
+        width:100%;
+        padding-left:0.5em;
+        textarea{
+           width:80%;
+        }
+        h2{
+            font-size:150%;
+        }
+    }   
+}
