--- a/public/scss/userpage.scss
+++ b/public/scss/userpage.scss
@@ -156,7 +156,7 @@ body{
         width:65%;
         padding:0 1em;
         display:flex;
-        img{
+        .user-icon img{
             border-radius:50%;
             margin:0.5em 0;
         }
