--- a/public/css/userpage.css
+++ b/public/css/userpage.css
@@ -9,6 +9,24 @@ body {
   padding: 10px 5px;
   display: flex;
 }
+.userpage-body .my-detail {
+  width: 30%;
+  box-sizing: border-box;
+  border-right: double 5px #bff;
+  padding-top: 10px;
+  padding-right: 5px;
+  padding-left: 1em;
+}
+.userpage-body .my-detail .basic-profile img {
+  border-radius: 50%;
+}
+.userpage-body .my-detail .my-rank {
+  margin-top: 1.5em;
+}
+.userpage-body .my-detail .my-rank h3 {
+  color: #c6f;
+  text-shadow: 0 0 3px #c0c, 0 0 8px #c0c;
+}
 .user-name {
   color: #f36;
   margin: 10px 0;
@@ -64,24 +82,6 @@ body {
 .past-reply {
   border-bottom: 1px solid white;
   padding: 30px 0;
-}
-.my-detail {
-  width: 30%;
-  box-sizing: border-box;
-  border-right: double 5px #bff;
-  padding-top: 10px;
-  padding-right: 5px;
-  padding-left: 1em;
-}
-.my-detail .basic-profile img {
-  border-radius: 50%;
-}
-.my-detail .my-rank {
-  margin-top: 1.5em;
-}
-.my-detail .my-rank h3 {
-  color: #c6f;
-  text-shadow: 0 0 3px #c0c, 0 0 8px #c0c;
 }
 .footer {
   padding: 10px 5px;
