--- a/public/scss/userpage.scss
+++ b/public/scss/userpage.scss
@@ -124,7 +124,7 @@ body{
             width:100%;
             border-right:none;
             border-bottom: double 5px #BBFFFF;
-            display:flex;
+            display:block;
             margin-bottom:2em;
             padding:1em;
             .my-rank{
