--- a/public/scss/userpage.scss
+++ b/public/scss/userpage.scss
@@ -109,8 +109,7 @@ body{
     }
 }
 
-@media screen and (max-width: 900px)
-{
+@media screen and (max-width: 900px){
     .userpage-body{
         display:block;
         padding:0;
@@ -124,7 +123,7 @@ body{
             width:100%;
             border-right:none;
             border-bottom: double 5px #BBFFFF;
-            display:block;
+            display:flex;
             margin-bottom:2em;
             padding:1em;
             .my-rank{
@@ -144,7 +143,6 @@ body{
             padding:0 1em;
         }
     }
-    
 }
 
 @media screen and (max-width: 550px){
