--- a/public/scss/userpage.scss
+++ b/public/scss/userpage.scss
@@ -19,6 +19,15 @@ body{
         padding-top: 10px;
         padding-right: 5px;
         padding-left: 1em;
+        .profile_edit{
+            button &:hover{
+                background-color: #dcdcdc;
+            }
+            a{
+                color:	#696969;
+                text-decoration: none;
+            }
+        }
         .user-name{
             color: #FF3366;
             margin:10px 0;
@@ -26,6 +35,7 @@ body{
         }
         .basic-profile img{
             border-radius:50%;
+            margin:0.5em;
         }
         .my-rank{
             margin-top:1.5em;
@@ -109,7 +119,7 @@ body{
     }
 }
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 1000px){
     .userpage-body{
         display:block;
         padding:0;
