--- a/public/css/userpage.css
+++ b/public/css/userpage.css
@@ -17,6 +17,13 @@ body {
   padding-right: 5px;
   padding-left: 1em;
 }
+button .userpage-body .my-detail .profile_edit:hover {
+  background-color: #dcdcdc;
+}
+.userpage-body .my-detail .profile_edit a {
+  color: #696969;
+  text-decoration: none;
+}
 .userpage-body .my-detail .user-name {
   color: #f36;
   margin: 10px 0;
@@ -24,6 +31,7 @@ body {
 }
 .userpage-body .my-detail .basic-profile img {
   border-radius: 50%;
+  margin: 0.5em;
 }
 .userpage-body .my-detail .my-rank {
   margin-top: 1.5em;
@@ -94,7 +102,7 @@ body {
   color: #eff;
   font-weight: bold;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
   .userpage-body {
     display: block;
     padding: 0;
